CC#A - Desarrollo de la Etapa 6 -  Autenticación y Autorización con JWT

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,14 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "TaskManagerDB": "Server=DESKTOP-I8035JN;Database=TaskManagerDB;Trusted_Connection=True;MultipleActiveResultSets=True;Encrypt=False;TrustServerCertificate=true"
+  },
+
+  "Jwt": {
+    "Key": "estaesunaclavesecretamuyseguraparalasapi",
+    "Issuer": "TuAplicacionIssuer",
+    "Audience": "TusUsuariosAudience"
   }
 }
+
+
+
